--- a/Areas/HumanResource/Views/Employees/Edit.cshtml
+++ b/Areas/HumanResource/Views/Employees/Edit.cshtml
@@ -19,11 +19,11 @@
     </div>
 
     <div>
-        <a href="/HumanResource/Employees/Allowance?employeeid=8060&categoryid=1">Allowance Setup</a>
+        <a href="/HumanResource/Employees/Allowance?employeeid=@Model.EmployeeID&categoryid=@Model.CategoryID">Allowance Setup</a>
     </div>
 
     <div>
-        <a href="/HumanResource/Employees/Deduction?employeeid=8060&categoryid=1">Deduction Setup</a>
+        <a href="/HumanResource/Employees/Deduction?employeeid=@Model.EmployeeID&categoryid=@Model.CategoryID">Deduction Setup</a>
     </div>
 </div>
 <hr />
