--- a/Areas/HumanResource/Views/LoanSanctions/Details.cshtml
+++ b/Areas/HumanResource/Views/LoanSanctions/Details.cshtml
@@ -60,10 +60,10 @@
             @Html.DisplayFor(model => model.DeductionId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Reuqest)
+            @Html.DisplayNameFor(model => model.Request)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Reuqest.RequestID)
+            @Html.DisplayFor(model => model.Request.RequestID)
         </dd>
     </dl>
 </div>
