--- a/Areas/HumanResource/Views/StandardDeductionCalculations/Edit.cshtml
+++ b/Areas/HumanResource/Views/StandardDeductionCalculations/Edit.cshtml
@@ -14,7 +14,7 @@
                     @item.Allowance
                 </td>
                 <td>
-                    @if (item.Deductionid == 0 ) {
+                    @if (item.ID == 0 ) {
                         <input type="checkbox" name="allowance[@item.AllowanceID].selected">
                     } else {
                         <input type="checkbox" name="allowance[@item.AllowanceID].selected" checked>
