--- a/Areas/HumanResource/Views/Allowances/Create.cshtml
+++ b/Areas/HumanResource/Views/Allowances/Create.cshtml
@@ -7,8 +7,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="form-group">
-            @Html.Raw(@TempData["Alert"])
+        <div class="form-group" id="message">
         </div>
     </div>
 </div>
@@ -16,10 +15,9 @@
 <h5>Allowance</h5>
 <hr />
 
-<form asp-action="Create">
 <div class="standard-row-container">
-<div class="row" style="width:60%">
-    <div class="col-md-6">
+<div class="row" style="width:30%">
+    <div class="col-md-10">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -36,17 +34,42 @@
                     <label asp-for="PayrollSlNO" class="control-label">Payroll Rank</label>
                     <input asp-for="PayrollSlNO" class="form-control" />
                     <span asp-validation-for="PayrollSlNO" class="text-danger"></span>
-                </div>           
+                </div> 
+                <div class="form-group">
+                    <label asp-for="Type" class="control-label"></label>
+                    <select asp-for="Type" class="form-control" asp-items="@ViewBag.TypeList"></select>
+                    <span asp-validation-for="Type" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="RoundOff" class="control-label"></label>
+                    @{
+                        var round_off = new List<SelectListItem> {
+                    new SelectListItem {Text="" , Value ="" },
+                    new SelectListItem {Text = "Ceiling", Value = "Ceiling" } ,
+                    new SelectListItem {Text = "Up" , Value = "Up" },
+                    new SelectListItem {Text = "Down" , Value = "Down" }
+                    };
+
+                        ViewData["RoundOff"] = new SelectList(round_off, "Value", "Text");
+                    }
+                    <select asp-for="RoundOff" class="form-control" asp-items="@ViewBag.RoundOff"></select>
+                </div>
+                <br>
+                <div class="form-group">
+                    <input type="button" value="Create" class="btn btn-primary" id="submit" /> |
+                    <a asp-action="Index">Back to List</a>
+                </div>
         
     </div>
 </div>
 
-        <div class="row" style="width:30%">
-     <div class="col-md-6">
+<div class="row" style="width:30%">
+     <div class="col-md-12">
 
                 <div class="form-group form-check">
                     <label class="form-check-label">
-                        <input class="form-check-input" asp-for="RoundOff" /> RoundOff
+                        <input class="form-check-input" asp-for="OnYearlyIncome" /> On Annual Pay
                     </label>
                 </div>
                 <div class="form-group form-check">
@@ -61,12 +84,94 @@
                 </div>
      </div>
 </div>
+        <div style="width:20%" class="row">
+            <div class="col-md-12">
+                <div id="StandardDeductionCalculation" style="width:100%">
+                </div>
+            </div>
+        </div>
+        <div style="width:20%" class="row">
+            <div class="col-md-12">
+                <div id="Schedule" style="width:100%">
+                </div>
+            </div>
+        </div>
 </div>
 
-    <br>
-    <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" /> |
-        <a asp-action="Index">Back to List</a>
-    </div>
-</form>
+<script>
+	$(document).ready(function () {
+		$.ajax({
+			url: '/humanresource/standarddeductioncalculations/index',
+			type: 'GET',
+			data: { allowanceid: 0 },
+			success: function (result) {
+				$('#StandardDeductionCalculation').html(result);
+			},
+			error: function (xhr, status, error) {
+				console.error("AJAX Error: " + error);
+			}
+		});
+
+		$.ajax({
+			url: '/humanresource/SlabDetails/AllowanceSchedule',
+			type: 'GET',
+			data: { allowanceid: 0 },
+			success: function (result) {
+				$('#Schedule').html(result);
+			},
+			error: function (xhr, status, error) {
+				console.error("AJAX Error: " + error);
+			}
+		});
+	});
+
+	$('#submit').on('click', function () {
+		var formData = {
+			name: $("#Name").val(),
+			description: $("#Description").val(),
+            payrollslno: $("#PayrollSlNO").val(),
+			allowance_type: $("#Type").val(),
+			roundoff: $("#RoundOff").val(),
+			onyearlyincome: $("#OnYearlyIncome").prop('checked'),
+			allowance_fixed: $("#Fixed").prop('checked'),
+			inactive: $("#InActive").prop('checked'),
+            allowanceid:0,
+			allowances: [],
+			months: []
+		}
+
+		$(".calculate_on").each(function () {
+			let is_selected = $(this).find('input[name$=".selected"]').prop('checked');
+			let allowanceid;
+			if (is_selected) {
+				allowanceid = $(this).find('input[name$=".allowanceid"]').val();
+				formData.allowances.push(allowanceid);
+			}
+		});
+
+		$(".month").each(function () {
+			let is_selected = $(this).find('input[type="checkbox"]').prop('checked');
+			let month;
+			if (is_selected) {
+				month = $(this).find('td').eq(0).text();
+				formData.months.push(month);
+			}
+		})
+
+		var promise = $.ajax({
+            url: '@Url.Action("Create", "Allowances")',
+            type: 'POST',
+            data: JSON.stringify(formData),
+            contentType: 'application/json' 
+        }).done( function (response) {
+                $("#message").html(response);
+                $("#message button").on("click", function() {
+                    let div = $(this).closest('div');
+                    div.fadeOut('3000', function() { div.css('display', 'none') });
+                });
+        }).fail( function (xhr,statusText,error) {
+                status = error ;            
+        });
+	})
+</script>
 
