--- a/Areas/HumanResource/Views/Deductions/Create.cshtml
+++ b/Areas/HumanResource/Views/Deductions/Create.cshtml
@@ -7,8 +7,7 @@
 
 <div class="row">
 	<div class="col-md-12">
-		<div class="form-group">
-			@Html.Raw(@TempData["Alert"])
+		<div class="form-group" id="message">
 		</div>
 	</div>
 </div>
@@ -67,22 +66,20 @@
 	</div>
 
 	<div class="row" style="width:30%">
-		<div class="col-md-12">
-			
+		<div class="col-md-12">			
 			<div class="form-group form-check">
 				<label class="form-check-label">
-					<input class="form-check-input" asp-for="OnYearlyIncome" /> @Html.DisplayNameFor(model => model.OnYearlyIncome)
-				</label>
-			</div>
-
-			<div class="form-group form-check">
-				<label class="form-check-label">
-					<input class="form-check-input" asp-for="Fixed" /> @Html.DisplayNameFor(model => model.Fixed)
+					<input class="form-check-input" asp-for="OnYearlyIncome"/> On Annual Pay
 				</label>
 			</div>
 			<div class="form-group form-check">
 				<label class="form-check-label">
-					<input class="form-check-input" asp-for="InActive" /> @Html.DisplayNameFor(model => model.InActive)
+					<input class="form-check-input" asp-for="Fixed"/> @Html.DisplayNameFor(model => model.Fixed)
+				</label>
+			</div>
+			<div class="form-group form-check">
+				<label class="form-check-label">
+					<input class="form-check-input" asp-for="InActive"/> @Html.DisplayNameFor(model => model.InActive)
 				</label>
 			</div>
 		</div>
@@ -140,6 +137,7 @@
 			onyearlyincome: $("#OnYearlyIncome").prop('checked'),
 			deduction_fixed: $("#Fixed").prop('checked'),
 			inactive: $("#InActive").prop('checked'),
+			deductionid:0,
 			allowances: [],
 			months: []
 		}
@@ -162,21 +160,19 @@
 			}
 		})
 
-		$.ajax({
-			url: '@Url.Action("Create", "Deductions")',
-			type: 'POST',
-			data: JSON.stringify(formData),
-			contentType: 'application/json',
-			success: function (response) {
-				// Handle success
-				alert('Form submitted successfully!');
-				console.log(response);  // Display or process the response here
-			},
-			error: function (xhr, status, error) {
-				// Handle error
-				alert('Error occurred while submitting the form!');
-				console.log(xhr + "  " + error);
-			}
-		});
+		var promise = $.ajax({
+            url: '@Url.Action("Create", "Deductions")',
+            type: 'POST',
+            data: JSON.stringify(formData),
+            contentType: 'application/json' 
+        }).done( function (response) {
+                $("#message").html(response);
+                $("#message button").on("click", function() {
+                    let div = $(this).closest('div');
+                    div.fadeOut('3000', function() { div.css('display', 'none') });
+                });
+        }).fail( function (xhr,statusText,error) {
+                status = error ;            
+        });
 	})
 </script>
