--- a/Areas/HumanResource/Views/LoanRequests/Delete.cshtml
+++ b/Areas/HumanResource/Views/LoanRequests/Delete.cshtml
@@ -5,11 +5,9 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h5>Are you sure you want to delete Loan Request?</h5>
 <div>
-    <h4>LoanRequest</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -55,10 +53,10 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Comments)
+            @Html.DisplayNameFor(model => model.Comment)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Comments)
+            @Html.DisplayFor(model => model.Comment)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Employee)
