--- a/Areas/HumanResource/Views/LoanRequests/Details.cshtml
+++ b/Areas/HumanResource/Views/LoanRequests/Details.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
 
 <div>
-    <h4>LoanRequest</h4>
+    <h5>Loan Request Details</h5>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -54,10 +53,10 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Comments)
+            @Html.DisplayNameFor(model => model.Comment)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Comments)
+            @Html.DisplayFor(model => model.Comment)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Employee)
