--- a/Areas/HumanResource/Views/LoanRequests/Index.cshtml
+++ b/Areas/HumanResource/Views/LoanRequests/Index.cshtml
@@ -5,16 +5,24 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="flex-header-container">
+    <div>
+        <h5>Loan Request</h5>
+    </div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+    <div>
+        <a asp-action="Create">Request a Loan</a>
+    </div>
+</div>
+
 <table class="table table-striped table-bordered ">
     <thead>
         <tr class="table-success ">
             <th>
-                @Html.DisplayNameFor(model => model.RequestNo)
+                @Html.DisplayNameFor(model => model.Employee)
+            </th>
+            <th>
+                Request No
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Date)
@@ -26,7 +34,7 @@
                 @Html.DisplayNameFor(model => model.Reason)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LoanType)
+                Loan Type
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Bank)
@@ -35,17 +43,17 @@
                 @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Comments)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Employee)
+                @Html.DisplayNameFor(model => model.Comment)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Employee.Name)
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.RequestNo)
             </td>
@@ -68,10 +76,7 @@
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Comments)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Employee.Discriminator)
+                @Html.DisplayFor(modelItem => item.Comment)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.RequestID">Edit</a> |
