--- a/Areas/HumanResource/Views/LoanSanctions/Delete.cshtml
+++ b/Areas/HumanResource/Views/LoanSanctions/Delete.cshtml
@@ -5,11 +5,9 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h5>Are you sure you want to delete Loan Approval?</h5>
 <div>
-    <h4>LoanSanction</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -61,10 +59,10 @@
             @Html.DisplayFor(model => model.DeductionId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Reuqest)
+            @Html.DisplayNameFor(model => model.Request)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Reuqest.RequestID)
+            @Html.DisplayFor(model => model.Request.RequestID)
         </dd>
     </dl>
     
