--- a/Areas/HumanResource/Views/LoanSanctions/Edit.cshtml
+++ b/Areas/HumanResource/Views/LoanSanctions/Edit.cshtml
@@ -5,9 +5,15 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<div class="row">
+    <div class="col-md-12">
+        <div class="form-group">
+            @Html.Raw(@ViewBag.Alert)
+        </div>
+    </div>
+</div>
 
-<h4>LoanSanction</h4>
+<h4>Loan Approval</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
