--- a/Areas/HumanResource/Views/LoanSanctions/Index.cshtml
+++ b/Areas/HumanResource/Views/LoanSanctions/Index.cshtml
@@ -5,14 +5,25 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+@* <h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+</p> *@
+
+<span>Pending Loan Request</span>
+    <div class="col-md-12">
+        <div id="pending" style="width:100%">
+        </div>
+    </div>
+
+<span>Approved Loan Request</span>
+<table class="table table-striped table-bordered">
     <thead>
-        <tr>
+        <tr class="table-success">
+            <th>
+                Employee
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Date)
             </th>
@@ -23,22 +34,19 @@
                 @Html.DisplayNameFor(model => model.Interest)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DeductionType)
+                Installment Amount
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Installment)
+                Installment #
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.InstallmentNo)
+                Start Date
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.InstallmentDate)
+                Deduction
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DeductionId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Reuqest)
+                Request #
             </th>
             <th></th>
         </tr>
@@ -47,7 +55,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Date)
+                @item.Request.Employee.Name 
+            </td>
+            <td>
+                @item.Date.ToString("dd/MM/yyyy")
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Amount)
@@ -56,29 +67,41 @@
                 @Html.DisplayFor(modelItem => item.Interest)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DeductionType)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Installment)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.InstallmentNo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.InstallmentDate)
+                @item.InstallmentDate.ToString("MMM/yyyy")
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DeductionId)
+                @Html.DisplayFor(modelItem => item.Deduction.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Reuqest.RequestID)
+                @Html.DisplayFor(modelItem => item.Request.RequestNo)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.SanctionId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.SanctionId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.SanctionId">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.SanctionId">Delete</a> |
+                <a asp-action="index" asp-controller="LoanSchedules" asp-route-id="@item.SanctionId">Schedule</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+<script>
+    $(document).ready(function () {
+        $.ajax({
+            url: '/humanresource/LoanSanctions/Pending',
+            type: 'GET',
+            success: function (result) {
+                $('#pending').html(result);
+            },
+            error: function (xhr, status, error) {
+                console.error("AJAX Error: " + error);
+            }
+        });
+    })
+</script>
