--- a/Areas/HumanResource/Views/StandardDeductionExcludes/Delete.cshtml
+++ b/Areas/HumanResource/Views/StandardDeductionExcludes/Delete.cshtml
@@ -1,15 +1,12 @@
-﻿@model Standus_5_0.Areas.HumanResource.Models.SlabDeductionExclude
+﻿@model Standus_5_0.Areas.HumanResource.Models.StandardDeductionExclude
 
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h5>Are you sure you want to delete?</h5>
 <div>
-    <h4>SlabDeductionExclude</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -19,22 +16,28 @@
             @Html.DisplayFor(model => model.Exclude)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Include)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Include)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Employee)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Employee.Discriminator)
+            @Html.DisplayFor(model => model.Employee.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Deduction)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Deduction.CutOffType)
+            @Html.DisplayFor(model => model.Deduction.Name)
         </dd>
     </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="EmployeeID" />
-        <input type="hidden" asp-for="DeductionID" />
+    <form asp-action="Delete" asp-route-eid="@Model.EmployeeID" asp-route-did="@Model.DeductionID" method="post">
+        <input type="hidden" asp-for="EmployeeID"  value="@Model.EmployeeID"/>
+        <input type="hidden" asp-for="DeductionID" value="@Model.DeductionID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
